{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 78,
  "lineage": "4c1ffcc2-16a3-75d3-f7e7-c726d88e61c8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492288869:internet-gateway/igw-0cdf40e962b57ecb7",
            "id": "igw-0cdf40e962b57ecb7",
            "owner_id": "381492288869",
            "tags": {
              "Name": "main_gw"
            },
            "tags_all": {
              "Name": "main_gw"
            },
            "vpc_id": "vpc-0c94dfca4bd1304ac"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492288869:route-table/rtb-02772c33ddf7af6e9",
            "id": "rtb-02772c33ddf7af6e9",
            "owner_id": "381492288869",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cdf40e962b57ecb7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my_route"
            },
            "tags_all": {
              "Name": "my_route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c94dfca4bd1304ac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sec_g",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492288869:security-group/sg-08228e062cad3ae45",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [],
            "id": "sg-08228e062cad3ae45",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sec_g",
            "name_prefix": "",
            "owner_id": "381492288869",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sec_g"
            },
            "tags_all": {
              "Name": "sec_g"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c94dfca4bd1304ac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "g_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "192.168.0.0/16"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-2122680267",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08228e062cad3ae45",
            "security_group_rule_id": "sgr-0f740b00b262a24b6",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sec_g",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492288869:vpc/vpc-0c94dfca4bd1304ac",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d6652d8ebe255b6c",
            "default_route_table_id": "rtb-0d2bec645d2e6bf63",
            "default_security_group_id": "sg-0fec2fdb5561d810c",
            "dhcp_options_id": "dopt-0115886bc47f21f43",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c94dfca4bd1304ac",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d2bec645d2e6bf63",
            "owner_id": "381492288869",
            "tags": {
              "Name": "my_vpc"
            },
            "tags_all": {
              "Name": "my_vpc"
            }
          }
        }
      ]
    }
  ]
}